# django-catalog

./: pyproject.toml
apps/taskapp/: tasks.py
apps/users/: urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: profiles.py  users.py
apps/users/reports/: users.py
apps/users/serializers/: users.py
apps/users/templates/: template_test.html
apps/users/templates/users/reports/: user_list.html
apps/users/views/: users.py
apps/utils/: models.py
config/: settings.py  urls.py
