[tool.poetry]
name = "django-catalog"
version = "0.1.0"
description = ""
authors = ["Jesús Herrera <jesusmaherrera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
django-weasyprint = "^1.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
