[tool.poetry]
name = "django-catalog"
version = "0.1.0"
description = ""
authors = ["Jesús Herrera <jesusmaherrera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
django-weasyprint = "^1.1.0"
djangorestframework = "^3.12.2"
djangorestframework-simplejwt = "^4.6.0"
django-cors-headers = "^3.7.0"
redis = "^3.5.3"
django-redis = "^4.12.1"
tornado = "^6.1"
celery = "<5.0.0"
flower = "^0.9.7"
Pillow = "^8.1.2"
Werkzeug = "^1.0.1"
django-extensions = "^3.1.1"
Markdown = "^3.3.4"
django-filter = "^2.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
